--- a/league/index.html
+++ b/league/index.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>kuyngill world</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="C:\Users\경일\Desktop\new-project\bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="C:\Users\경일\Desktop\new-project\bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <meta charset="utf-8">
-    <title>JavaScript</title>
-    <style>
-      header{
-        border-bottom: 1px solid gray;
-        padding: 20px
+    <!-- <style>
+      #header .top {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+    }
+    #header .top {
+          position: relative;
+        }
+    #logo {
+      position: relative;
+      margin: 1.75em 1.5em 1.5em 1.5em;
+      min-height: 48px;
+      cursor: default;
+         }
+    #logo h1 {
+      position: relative;
+      /*color: #fff;*/
+      font-weight: 600;
+      font-size: 1em;
+      line-height: 1em;
+    }
+    #logo p {
+      position: relative;
+      display: block;
+      font-size: 0.6em;
+      /*color: rgba(255, 255, 255, 0.5);*/
+      line-height: 1.25em;
+      margin: 0.5em 0 0 0;
+    }
+    #logo .image {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    #logo .image {
+        position: relative;
+        margin: 0 0 0.5em 0;
       }
-      nav{
-        border-right:1px solid gray;
-        width: 200px;
-        height: 600px;
-        float: left;
+      #logo {
+        margin: 1.5em 1.25em 1.25em 1.25em;
       }
-      body{
-        background-color: black;
-        color: white;
-      }
-      a{
-        color: white;
-      }
-      article{
-        padding-top: 50px;
-        text-align: center;
-      }
-    </style>
+    </style> -->
   </head>
   <body>
-    <header>
+    <div id="header">
+      <div class="top">
+        <div id="logo">
+    <img src="C:\Users\경일\Desktop\new-project\img\kuyngill.jpeg" border=1 align=left vspace=0 hspace=20 style="max-width: 8%; height: auto;" alt="">
     <h1 id="title">경으리</h1>
     <p>League of Legends</p>
-    </header>
-    <nav id="cp"><br>
-    <li><a href="#/EZ" id="EZ-link" class="skel-layers-ignoreHref">이즈리얼</a></li><br>
-    <li><a href="#/TH" id="TH-link" class="skel-layers-ignoreHref">쓰레쉬</a></li><br>
-    <li><a href="#/AL" id="AL-link" class="skel-layers-ignoreHref">알리스타</a></li>
-    </nav>
-    <article>
-      <img src="img/EZ.jpg" alt="">
-      <header>
-        <h3>이즈리얼</h3>
-      </header>
-    </article>
-    <article>
-      <img src="img/TH.jpg" alt="">
-      <header>
-        <h3>쓰레쉬</h3>
-      </header>
-    </article>
-    <article>
-      <img src="img/AL.jpg" alt="">
-      <header>
-        <h3>알리스타</h3>
-      </header>
-    </article>
+        </div>
+        <nav id="nav">
+          <ul>
+            <li>이즈리얼</li>
+            <li>케이틀린</li>
+            <li>미스포춘</li>
+            <li>루시안</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="bottom">
+        <ul>
+          <li>Twitter</li>
+          <li>Facebook</li>
+          <li>Email</li>
+          <li>Fow</li>
+        </ul>
+      </div>
+    </div>
+    <script src="C:\Users\경일\Desktop\new-project\bootstrap/jquery-1.11.3.js"></script>
+    <script src="C:\Users\경일\Desktop\new-project\bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
