reference, add img

--- a/Home/index.html
+++ b/Home/index.html
@@ -56,7 +56,10 @@
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">About Champ</a>
+                        <a class="page-scroll" href="#AboutChamp">About Champ</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#LOLInven">LOL Inven</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -96,17 +99,26 @@
         </div>
     </section>
 
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
+    <!-- About Champ Section -->
+    <section id="AboutChamp" class="container content-section text-center">
+            <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>About Champ</h2>
                     <p>Ezreal :lsktnalkrnsldkviakrnal<br>Caitlyn :dldldldlslkskskltn<br>Missfortune :dkslnltksnllrl<br>Lucian :dkstlksnrlskrnlt</p>
                     <p>SESON-4 : Gold &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SESON-5 : Plattinum</p>
                 </div>
             </div>
-        </div>
+    </section>
+
+    <!-- LOLInven section -->
+    <section id="LOLInven" class="container content-section text-center">
+        <div class="">
+            <div class="col-lg-8 col-lg-offset-2">
+                <div class="list-inline banner-social-buttons"><a href="http://lol.inven.co.kr/" class="btn btn-default btn-lg"><img src="C:\Users\경일\Desktop\new-project\Home\img\Inven.jpg" style="max-width: 30%; height: auto;" alt=""> <span class="network-name">LOL Inven</span></a></div><br>
+                <p>위에 링크로 롤인벤에 접속 하실 수 있습니다.</p>
+                <p>다양한 공략과 User들 간의 reference, feedback<br>을 통해 최신정보를 확인 하실 수 있습니다.</p>
+            </div>
+        </div>    
     </section>
 
     <!-- Contact Section -->
