--- a/Home/index.html
+++ b/Home/index.html
@@ -105,8 +105,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>About Champ</h2>
-                    <p>Ezreal : 이즈리얼은 강력한 원거리 챔피언으로 장거리 견제와 저격, 상대에게 순간 접근, 도주가 가능한 이동 기술도 가지고 있습니다. 이즈리얼은 기술들을 적중시킬 때마다 공격 속도가 증가하며 신비한 화살은 재사용 시간을 단축하는 효과도 가지고 있습니다. 아이템에 따라 다양한 방향의 육성이 가능합니다.<br>Caitlyn : 케이틀린은 가장 긴 기본 공격 사거리를 자랑하는 챔피언입니다. 긴 사거리로 초반에 적을 압박하여 우위를 얻어낼 수 있으며, 요들 덫과 투망 등 생존에 도움되는 스킬도 가지고 있습니다. 패시브 활용을 위해 수풀 근처에서 전투를 지속하는 것이 좋습니다.<br>Missfortune : 미스 포츈은 상대방을 압박하여 성장을 방해하는 원거리 챔피언으로 초반에 강력한 모습을 보입니다. 패시브 기술인 활보와 공격 스킬들을 사용하여 빠르게 적을 견제하고 도주할 수 있습니다.<br>Lucian : 루시안은 쌍권총을 사용하는 원거리 챔피언입니다. 끈질긴 추격를 이용하여 모든 둔화 효과를 제거할 수 있으며, 상대방에게 급속도로 접근하거나 지형을 넘어 도주할 수 있어서 높은 생존력을 자랑합니다. 궁극기인 빛의 심판은 시전 후 공격 방향 전환이 불가능하지만 시전 후 자유롭게 이동이 가능합니다.</p>
-                    <p>SESON-4 : Gold &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SESON-5 : Plattinum</p>
+                    <p><span style="color:red">Ezreal</span> : 이즈리얼은 강력한 원거리 챔피언으로 장거리 견제와 저격, 상대에게 순간 접근, 도주가 가능한 이동 기술도 가지고 있습니다. 이즈리얼은 기술들을 적중시킬 때마다 공격 속도가 증가하며 신비한 화살은 재사용 시간을 단축하는 효과도 가지고 있습니다. 아이템에 따라 다양한 방향의 육성이 가능합니다.<br><span style="color:red">Caitlyn</span> : 케이틀린은 가장 긴 기본 공격 사거리를 자랑하는 챔피언입니다. 긴 사거리로 초반에 적을 압박하여 우위를 얻어낼 수 있으며, 요들 덫과 투망 등 생존에 도움되는 스킬도 가지고 있습니다. 패시브 활용을 위해 수풀 근처에서 전투를 지속하는 것이 좋습니다.<br><span style="color:red">Missfortune</span> : 미스 포츈은 상대방을 압박하여 성장을 방해하는 원거리 챔피언으로 초반에 강력한 모습을 보입니다. 패시브 기술인 활보와 공격 스킬들을 사용하여 빠르게 적을 견제하고 도주할 수 있습니다.<br><span style="color:red">Lucian</span> : 루시안은 쌍권총을 사용하는 원거리 챔피언입니다. 끈질긴 추격를 이용하여 모든 둔화 효과를 제거할 수 있으며, 상대방에게 급속도로 접근하거나 지형을 넘어 도주할 수 있어서 높은 생존력을 자랑합니다. 궁극기인 빛의 심판은 시전 후 공격 방향 전환이 불가능하지만 시전 후 자유롭게 이동이 가능합니다.</p>
+                    <p>SESON-4 : <span style="color:rgb(255,215,0)">Gold</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SESON-5 : <span style="color:rgb(51,179,209)">Plattinum</span></p>
                 </div>
             </div>
     </section>
