--- a/Home/index.html
+++ b/Home/index.html
@@ -127,9 +127,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact 경으리</h2>
-                <p>feedback은 Email로 부탁드립니다.<br>Twitter, Github, Google+는 아래 링크로 들어가실수 있습니다.</p>
-                <p><a href="mailto:feedback@startbootstrap.com">kaspi6000@gmail.com</a>
-                </p>
+                <p>Feedback은 Email로 부탁드립니다.<br>Twitter, Github, Google+는 아래 링크로 들어가실수 있습니다.</p>
+                <p><a href="mailto:kaspi6000@gmail.com?subject=Hi!">Send Email.</a></p>
+                <!-- <p><a href="mailto:feedback@startbootstrap.com">kaspi6000@gmail.com</a>
+                </p> -->
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
@@ -185,7 +186,7 @@
                 center: myLatlng;
                 mapTypeld: google.maps.MapTypeld.ROADMAP
             }
-            var map = nwe google.maps.Map(document.getElementById('map_view'),mapOptions);
+            var map = new google.maps.Map(document.getElementById('map_view'),mapOptions);
             var marker = new google.maps.Maker({
                 position: myLatlng,
                 map: map,
