--- a/Home/index.html
+++ b/Home/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="css/kuyngill.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -31,8 +31,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="initialize()">
-    <div id="map_view" style="width:500px; height:300px;"></div>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="">
 
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -42,6 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
+                    <!-- <input type="" id="audiofile" size="10" value="demo.mp3" /> -->
                     <i class="fa fa-play-circle"></i>  <span class="light">경으리</span> World
                 </a>
             </div>
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <img src="C:\Users\경일\Desktop\new-project\img\kuyngill.jpeg" border=1 align=left vspace=0 hspace=0 style="max-width: 28%; height: auto;" alt=""><p>1991.02.22 강경일</p>
+                <img  id="aboutimg" border=1 align=left vspace=0 hspace=0 style="max-width: 28%; height: auto;" alt=""><p>1991.02.22 강경일</p>
                 <p>천안 월봉고등학교 4회 졸업.<br>천안 공주공과대학교 4학년 재학.</p><p>Software Engineer.</p>
             </div>
         </div>
@@ -115,7 +115,9 @@
     <section id="LOLInven" class="container content-section text-center">
         <div class="">
             <div class="col-lg-8 col-lg-offset-2">
-                <div class="list-inline banner-social-buttons"><a href="http://lol.inven.co.kr/" class="btn btn-default btn-lg"><img src="C:\Users\경일\Desktop\new-project\Home\img\Inven.jpg" style="max-width: 30%; height: auto;" alt=""> <span class="network-name">LOL Inven</span></a></div><br>
+                <div class="list-inline banner-social-buttons">
+                    <a href="http://lol.inven.co.kr/" class="btn btn-default btn-lg"><img src="img\Inven.jpg" style="max-width: 30%; height: auto;" alt=""> <span class="network-name">LOL Inven</span></a>
+                </div><br>
                 <p>위에 링크로 롤인벤에 접속 하실 수 있습니다.</p>
                 <p>다양한 공략과 User들 간의 reference, feedback<br>을 통해 최신정보를 확인 하실 수 있습니다.</p>
             </div>
@@ -128,9 +130,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact 경으리</h2>
                 <p>Feedback은 Email로 부탁드립니다.<br>Twitter, Github, Google+는 아래 링크로 들어가실수 있습니다.</p>
-                <p><a href="mailto:kaspi6000@gmail.com?subject=Hi!">Send Email.</a></p>
-                <!-- <p><a href="mailto:feedback@startbootstrap.com">kaspi6000@gmail.com</a>
-                </p> -->
+                <p><a href="mailto:qvil@naver.com">Send Email.</a></p>
+                <!-- <p><a href="mailto:feedback@startbootstrap.com">kaspi6000@gmail.com</a> -->
+                </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
@@ -166,46 +168,10 @@
     <script src="js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJVRHBU-j3uEplNgQyRBv9rRcLlvMrj-Y&sensor=false"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script>
-        function initialize(){
-            var Y_point = 36.796048;
-            var X_point = 127.116767;
-            var zoomLevel = 16;
-            var markertitle = "경으리World";
-            var markerMaxWidth = 300;
-            var contentString = '<div>'+
-            '<h2>경으리World</h2>'+
-            '<p>Hello! My project!</p>'+
-            '</div>';
-
-            var myLatlng = new google.maps.Latlng(Y_point, X_point);
-            var mapOption = {
-                zoom: zoomLevel;
-                center: myLatlng;
-                mapTypeld: google.maps.MapTypeld.ROADMAP
-            }
-            var map = new google.maps.Map(document.getElementById('map_view'),mapOptions);
-            var marker = new google.maps.Maker({
-                position: myLatlng,
-                map: map,
-                title: markerTitle
-            });
-            var infowindow = new google.maps.infoWindow(
-                        {
-                            content: contentString,
-                            maxWidth: markerMaxWidth
-                        }
-                );
-            google.maps.event.addListener(marker, 'click', function(){
-                infowindow.open(map, marker);
-            });
-        }
-    </script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
+    <script src="js/kuyngill.js"></script>
 
 </body>
 
